[gd_scene load_steps=15 format=2]

[ext_resource path="res://passaro/morte/1.png" type="Texture" id=1]
[ext_resource path="res://passaro/susto.png" type="Texture" id=2]
[ext_resource path="res://passaro/morte/0.png" type="Texture" id=3]
[ext_resource path="res://passaro/morte/2.png" type="Texture" id=4]
[ext_resource path="res://passaro/lado/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://Pato.gd" type="Script" id=6]
[ext_resource path="res://passaro/cima/sprite_1.png" type="Texture" id=7]
[ext_resource path="res://passaro/cima/sprite_0.png" type="Texture" id=8]
[ext_resource path="res://passaro/cima/sprite_2.png" type="Texture" id=9]
[ext_resource path="res://passaro/lado/sprite_0.png" type="Texture" id=10]
[ext_resource path="res://passaro/lado/sprite_1.png" type="Texture" id=11]
[ext_resource path="res://sons/pato.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "cima",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 5 ) ],
"loop": true,
"name": "lado",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "morte",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "susto",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 56.0357

[node name="Pato" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "cima"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 7 )
shape = SubResource( 2 )

[node name="movimento" type="Timer" parent="."]
autostart = true

[node name="anima" type="Timer" parent="."]
autostart = true

[node name="morte" type="Timer" parent="."]
wait_time = 0.2

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="quack" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="movimento" to="." method="_on_movimento_timeout"]
[connection signal="timeout" from="anima" to="." method="_on_anima_timeout"]
[connection signal="timeout" from="morte" to="." method="_on_morte_timeout"]
[connection signal="timeout" from="quack" to="." method="_on_quack_timeout"]
